--- a/app/views/zgloszenies/index.html.erb
+++ b/app/views/zgloszenies/index.html.erb
@@ -19,6 +19,7 @@
       <th>Wysylka</th>
       <% if current_user.admin? %>
         <th>ID użytkownika</th>
+        <th>ID serwisanta</th>
       <% end %>
       <th colspan="3">Akcje</th>
     </tr>
@@ -40,6 +41,12 @@
         <td><%= zgloszeny.wysylka %></td>
         <% if current_user.admin? %>
           <td><%= zgloszeny.user_id %></td>
+          <td>
+          <% if zgloszeny.pracownikid.nil? %>
+          Brak
+          <% else %>
+          <%= zgloszeny.pracownikid %></td>
+          <% end %>
         <% end %>
         <td><%= link_to 'Pokaż', zgloszeny, class:'btn btn-xs btn-primary' %>
         <%= link_to 'Edytuj', edit_zgloszeny_path(zgloszeny), class:'btn btn-xs btn-warning' %>
