--- a/app/views/zgloszenies/_form.html.erb
+++ b/app/views/zgloszenies/_form.html.erb
@@ -10,29 +10,26 @@
       </ul>
     </div>
   <% end %><br />
+
 <div class="field">
   <%= f.hidden_field :user_id, :value => current_user.id  %>
 
 </div>
   <div class="field">
     <%= f.label :Zgłoszenie_do_działu %><br/>
-    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz" %>
+    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz"%>
   </div><br/>
-
-
   <div class="field">
     <%= f.label :data_zgłoszenia %><br/>
     <%= f.date_select :data_zgloszenia %>
   </div><br/>
-
-
+  
   <div class="field">
     <%= f.label :nazwa_urzadzenia %><br/>
     <%= f.text_area :nazwa_urzadzenia %>
   </div><br/>
 
-  <div class="field">
-    <%= f.label :opis_uszkodzenia %><br/>
+  <div class="field"><br/><%= f.label :opis_uszkodzenia %><br/>
     <%= f.text_area :opis_uszkodzenia %>
   </div><br/>
 
@@ -54,12 +51,7 @@
 
   <div class="field">
     <%= f.label :data_naprawy %><br/>
-    <%= f.date_select :data_naprawy %>
-  </div><br/>
-
-  <div class="field">
-    <%= f.label :id_serwisanta %><br/>
-    <%= f.number_field :pracownikid %>
+    <%= f.date_select :data_naprawy, :default => nil %>
   </div><br/>
 
   <% end %>
