--- a/app/views/zgloszenies/_form.html.erb
+++ b/app/views/zgloszenies/_form.html.erb
@@ -1,3 +1,6 @@
+<% content_for :head do %>
+  <meta name="turbolinks-cache-control" content="no-cache">
+<% end %>
 <%= form_for(zgloszeny) do |f| %>
   <% if zgloszeny.errors.any? %>
     <div id="error_explanation">
@@ -10,20 +13,19 @@
       </ul>
     </div>
   <% end %><br />
-
 <div class="field">
   <%= f.hidden_field :user_id, :value => current_user.id  %>
 
 </div>
   <div class="field">
     <%= f.label :Zgłoszenie_do_działu %><br/>
-    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz"%>
+    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", id:"dzialselect"%>
   </div><br/>
   <div class="field">
     <%= f.label :data_zgłoszenia %><br/>
     <%= f.date_select :data_zgloszenia %>
   </div><br/>
-  
+
   <div class="field">
     <%= f.label :nazwa_urzadzenia %><br/>
     <%= f.text_area :nazwa_urzadzenia %>
