--- a/app/views/static_pages/statystyki.html.erb
+++ b/app/views/static_pages/statystyki.html.erb
@@ -1,32 +1,23 @@
 <h1>Statystyki</h1>
+
 <div class="jumbotron">
-<h2>Zgłoszenia</h2>
-<h3>Ogólna ilość zgłoszeń: <%= Zgloszenie.calculate(:count, :all) %>
-  <div class="progress">
-    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= Zgloszenie.calculate(:count, :all) %>%">
-      <span class="sr-only">40% Complete (success)</span>
-    </div>
-  </div>
-</h3>
-<h3>Ilość zgłoszeń w dziale x: <%= Zgloszenie.calculate(:count, :all) %>
-  <div class="progress">
-    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= Zgloszenie.calculate(:count, :all) %>%">
-      <span class="sr-only">40% Complete (success)</span>
-    </div>
-  </div>
-</h3>
+  <h2>Zgłoszenia</h2>
+  <h4>Ogólna ilość zgłoszeń: <b><%= Zgloszenie.calculate(:count, :all) %></b></h4>
+
+  <h3>Ilość zgłoszeń według działów: </h3>
+  <%= pie_chart Zgloszenie.group(:dzial_id).count %>
+
+  <h3>Ilość zgłoszeń według daty: </h3>
+  <%= line_chart Zgloszenie.group_by_day(:created_at).count %>
+
+  <h3>Rozkład zgłoszeń na dni tygodnia: </h3>
+  <%= column_chart Zgloszenie.group_by_day_of_week(:created_at, format: "%a").count %>
 </div>
 
 <div class="jumbotron">
-<h2>Pozostałe Statystki</h2>
-<h3>Rejestracja użytkowników według dnia: </h3>
-<%= line_chart User.group_by_day(:created_at).count %>
+  <h2>Użytkownicy</h2> </td>
+  <h4>Ogólna ilość użytkowników: <b><%= User.calculate(:count, :all) %></b></h4> </td>
 
-<h3>Ilość użytkowników: <%= User.calculate(:count, :all) %>
-  <div class="progress">
-    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: <%= User.calculate(:count, :all) %>%">
-      <span class="sr-only">40% Complete (success)</span>
-    </div>
-  </div>
-</h3>
+  <h3>Rejestracja użytkowników według dnia: </h3>
+  <%= line_chart User.group_by_day(:created_at).count %>
 </div>
