--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,47 +1,50 @@
-<h2>Edycja użytkownika</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
-<div class="jumbotron">
+<div class="container">
 
-  <div class="field">
-    <%= f.label :Email %><br/>
-    <%= f.email_field :email, autofocus: true %></p>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+<div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    <form role="form">
+      <center><h2>Edycja konta</h2></center>
+      <hr class="colorgraph">
+      <div class="row">
+      <div class="form-group">
+      <%= f.email_field :email, autofocus: true, class: "form-control input-lg", placeholder: "Email" %>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :Hasło %><br/>
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
+  <% if @minimum_password_length %>
       <br />
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
-  </div><br />
-
-  <div class="field">
-    <%= f.label :Powtórz_hasło %><br/>
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div><br />
-
-  <div class="field">
-    <%= f.label :Aktualne_hasło %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div><br />
-
-  <div class="actions">
-    <%= f.submit "Aktualizuj", class:'btn btn-primary' %>
+      </div>
+      <div class="form-group">
+      <%= f.password_field :password, autocomplete: "off", class: "form-control input-lg", placeholder: "Hasło" %>
+    
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control input-lg", placeholder: "Powtórz hasło" %>
+          </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-6">
+          <div class="form-group">
+          <%= f.password_field :current_password, autocomplete: "off", class: "form-control input-lg", placeholder: "Aktualne hasło" %>
+          </div>
+        </div>
+        </div>
+      
+      <hr class="colorgraph">
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+        <%= f.submit "Aktualizuj", class:'btn btn-primary btn-block btn-lg' %></div>
+        <div class="col-xs-12 col-md-6">
+        <%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete, class:'btn btn-danger btn-block btn-lg' %></div>       
+      </div>
+    </form>
   </div>
+</div>
+</div> 
 <% end %>
-
-<h3>Chcesz usunąć konto?</h3>
-
-  <%= button_to "Usuń konto", registration_path(resource_name), data: { confirm: "Jesteś pewny?" }, method: :delete, class:'btn btn-danger' %><br />
-
-<div class="actions">
-<%= link_to "Wróć", :back, class: "btn btn-success" %>
- </div><br />
