--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,41 +1,52 @@
-<h2>Rejestracja</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-<div class="jumbotron">
-
-  <div class="field">
-    <p>Imie
-    <%= f.text_field :first_name, autofocus: true, class:"form-control" %></p>
-  </div>
-
-  <div class="field">
-    <p>Nazwisko
-    <%= f.text_field :last_name, class:"form-control" %></p>
-  </div>
-
-  <div class="field">
-    <p>Adres e-mail
-    <%= f.email_field :email, autofocus: true, class:"form-control" %></p>
-  </div>
-
-  <div class="field">
-     <p>Hasło
-    <% if @minimum_password_length %>
-    <em>(Minimum <%= @minimum_password_length %> znaków.)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", class:"form-control" %> </p>
-  </div>
-
-  <div class="field">
-  <p>Potwierdź hasło
-    <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control" %></p>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Rejestracja", class: "btn btn-success" %> <%= render "devise/shared/links" %>
-  </div>
+<div class="container">
+<div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= devise_error_messages! %>
+  <form role="form">
+   <center><h2>Rejestracja</h2></center>
+   <hr class="colorgraph">
+   <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-6">
+     <div class="form-group">
+     <%= f.text_field :first_name, autofocus: true, class:"form-control input-lg", placeholder: "Imie" %>
+     </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6">
+     <div class="form-group">
+     <%= f.text_field :last_name, class:"form-control input-lg", placeholder: "Nazwisko" %>
+     </div>
+    </div>
+   </div>
+   <div class="form-group">
+   <%= f.email_field :email, autofocus: true, class:"form-control input-lg", placeholder: "Email" %>
+   </div>
+   <div class="row">
+    <div class="col-xs-12 col-sm-6 col-md-6">
+     <div class="form-group">
+     <% if @minimum_password_length %>
+     <em>(Minimum <%= @minimum_password_length %> znaków.)</em>
+     <% end %><br />
+     <%= f.password_field :password, autocomplete: "off", class:"form-control input-lg",placeholder: "Hasło" %>
+     </div>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6"><br/>
+     <div class="form-group">
+     <%= f.password_field :password_confirmation, autocomplete: "off", class:"form-control input-lg", placeholder: "Powtórz hasło"  %>
+     </div>
+    </div>
+   </div>
+   
+   <hr class="colorgraph">
+   <div class="row">
+    <div class="col-xs-12 col-md-6">
+    <%= f.submit "Rejestracja", class: "btn btn-primary btn-block btn-lg"%> </div>
+    <div class="col-xs-12 col-md-6"><a href="http://localhost:3000/my/users/sign_in" class="btn btn-success btn-block btn-lg">Zaloguj się</a></div>
+   </div>
+  </form>
+ </div>
+</div>
+</div>
 <% end %>
 
 
