--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,42 +1,9 @@
-<h1>Użytkownicy</h1>
-<div class="jumbotron">
-<div class="table-responsive">
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Imie</th>
-      <th>Nazwisko</th>
-      <th>Adres email</th>
-      <th>Dział</th>
-      <th>Stanowisko</th>
-      <th>Pracownik?</th>
-      <th>Admin?</th>
-      <th>Utworzony</th>
-      <th colspan="3">Akcje</th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @users.order("created_at").each do |user| %>
-      <tr>
-        <td><%= user.id %></td>
-        <td><%= user.first_name %></td>
-        <td><%= user.last_name %></td>
-        <td><%= user.email %></td>
-        <td><%= Dzial.where(id:user.dzial_id).pluck(:nazwa).last %></td>
-        <td><%= Stanowisko.where(id:user.stanowisko_id).pluck(:nazwa).last %></td>
-        <td><%= user.ispracownik %></td>
-        <td><%= user.admin %></td>
-        <td><%= user.created_at %></td>
-        <td><%= link_to "Edytuj", edit_user_path(user), class:'btn btn-xs btn-primary' %></td>
-        <td><%= link_to "Admin +/-", grantadmin_user_path(user), method: :grantadmin, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-warning' %></td>
-        <td><%= link_to "Pracownik +/-", pracownik_user_path(user), method: :pracownik, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-warning' %></td>
-        <td><%= link_to "Usuń", user_path(user), method: :delete, data: { confirm: "Jesteś pewny?" }, class:'btn btn-xs btn-danger' %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= form_tag( users_path ,method: :get, remote: true, class: "search_form_u") do %>
+<%= text_field_tag :search, params[:search], placeholder: 'Wyszukaj...' %>
+<% end %> <br />
+
+<div class="table-responsive">
+<%= render 'users/partials/users_table', users: @users %>
 </div>
-<p><%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %></p>
 </div>
