--- a/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
+++ b/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
@@ -2,38 +2,52 @@
   <thead>
     <tr>
       <th>ID</th>
-      <!-- <th>Klient</th>
-      <th>Pracownik</th>
-      <th>Dzial</th> -->
+      <th>Dzial</th>
       <th>Priorytet</th>
       <th>Status</th>
       <th>Data zgłoszenia</th>
       <th>Data naprawy</th>
-      <th>Opis uszkodzenia</th>
       <th>Nazwa urzadzenia</th>
-      <!-- <th>Wysylka</th> -->
+      <th>Opis uszkodzenia</th>
+      <th>Wysylka</th>
+      <% if current_user.admin? %>
+        <th>ID użytkownika</th>
+        <th>ID serwisanta</th>
+      <% end %>
       <th colspan="3">Akcje</th>
     </tr>
   </thead>
 
   <tbody>
+
     <% @zgloszenies.each do |zgloszeny| %>
+    <% if current_user.id == zgloszeny.user_id || current_user.admin? %>
       <tr>
         <td><%= zgloszeny.id %></td>
-        <!-- <td><%= zgloszeny.klient_id %></td>
-        <td><%= zgloszeny.pracownik_id %></td>
-        <td><%= Dzial.where(id:zgloszeny.dzial_id).pluck(:nazwa).last %></td>        -->
+        <td><%= Dzial.where(id:zgloszeny.dzial_id).pluck(:nazwa).last %></td>
         <td><%= zgloszeny.priorytet %></td>
         <td><%= zgloszeny.status %></td>
         <td><%= zgloszeny.data_zgloszenia %></td>
         <td><%= zgloszeny.data_naprawy %></td>
-        <td><%= zgloszeny.opis_uszkodzenia %></td>
         <td><%= zgloszeny.nazwa_urzadzenia %></td>
-        <!-- <td><%= zgloszeny.wysylka %></td> -->
-        <td><%= link_to 'Pokaż', zgloszeny, class:'btn btn-xs btn-primary' %></td>
-        <td><%= link_to 'Edytuj', edit_zgloszeny_path(zgloszeny), class:'btn btn-xs btn-warning' %></td>
-        <td><%= link_to 'Usuń', zgloszeny, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-xs btn-danger' %></td>
+        <td><%= zgloszeny.opis_uszkodzenia %></td>
+        <td><%= zgloszeny.wysylka %></td>
+        <% if current_user.admin? %>
+          <td><%= zgloszeny.user_id %></td>
+          <td>
+          <% if zgloszeny.pracownikid.nil? %>
+          Brak
+          <% else %>
+          <%= zgloszeny.pracownikid %></td>
+          <% end %>
+        <% end %>
+        <td><%= link_to 'Pokaż', zgloszeny, class:'btn btn-xs btn-primary' %>
+        <%= link_to 'Edytuj', edit_zgloszeny_path(zgloszeny), class:'btn btn-xs btn-warning' %>
+        <%= link_to 'Usuń', zgloszeny, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-xs btn-danger' %></td>
+
       </tr>
-    <% end %>
+      <% end %>
+
+      <% end %>
   </tbody>
 </table>
