--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,4 @@
-
-<%= form_tag( users_path ,method: :get, remote: true, class: "search_form_u") do %>
-<%= text_field_tag :search, params[:search], placeholder: 'Wyszukaj...' %>
-<% end %> <br />
+<%= render 'users/partials/search', users: @users %>
 
 <div class="table-responsive">
 <%= render 'users/partials/users_table', users: @users %>
