--- a/app/views/stanowiskos/index.html.erb
+++ b/app/views/stanowiskos/index.html.erb
@@ -1,30 +1,45 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Stanowiska</h1>
-<div class="jumbotron">
-<div class="table-responsive">
-<table class="table table-striped">
-  <thead>
+<h1>Stanowiska</h1><br/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
+<div class="container">
+<div class="row">
+<div class="col-md-10 col-md-offset-1">
+<div class="panel panel-default panel-table">
+<div class="panel-heading">
+<div class="row">
+<div class="col col-xs-6">
+<h3 class="panel-title"></h3>
+</div>
+<div class="col col-xs-6 text-right">
+<%= link_to 'Dodaj stanowisko', new_stanowisko_path, class:'btn btn-sm btn-success btn-create' %>
+<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-success btn-create' %>
+</div>
+</div>
+</div>
+<div class="panel-body ">
+<table class="table table-striped table-bordered table-list">
+<thead>
+<tr>
+  <th><em class="fa fa-cog"></em></th>
+  <th class="hidden-xs">ID</th>
+  <th>Nazwa</th>
+</tr> 
+</thead>
+<tbody>
+<% @stanowiskos.each do |stanowisko| %>
     <tr>
-      <th>ID</th>
-      <th>Nazwa</th>
-      <th colspan="3">Akcje</th>
+      <td align="center">
+      <%= link_to '', stanowisko, class:'btn btn-warning fa fa-eye' %>
+      <%= link_to '', edit_stanowisko_path(stanowisko), class:'btn btn-primary fa fa-pencil' %>
+      <%= link_to '', stanowisko, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger fa fa-trash' %>
+      </td>
+      <td class="hidden-xs"><%= stanowisko.id %></td>
+      <td><%= stanowisko.nazwa %></td>
     </tr>
-  </thead>
-
-  <tbody>
-    <% @stanowiskos.each do |stanowisko| %>
-      <tr>
-        <td><%= stanowisko.id %></td>
-        <td><%= stanowisko.nazwa %></td>
-        <td><%= link_to 'Pokaż', stanowisko, class:'btn btn-xs btn-primary' %></td>
-        <td><%= link_to 'Edytuj', edit_stanowisko_path(stanowisko), class:'btn btn-xs btn-warning' %></td>
-        <td><%= link_to 'Usuń', stanowisko, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-xs btn-danger' %></td>
-      </tr>
     <% end %>
   </tbody>
 </table>
 </div>
-<%= link_to 'Dodaj nowe stanowisko', new_stanowisko_path, class:'btn btn-success' %>
-<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
 </div>
+</div></div></div>
+
+
