--- a/app/views/users/partials/_users_table.html.erb
+++ b/app/views/users/partials/_users_table.html.erb
@@ -7,6 +7,7 @@
 <div class="panel-heading">
 <div class="row">
 <div class="col col-xs-6">
+<strong><h3 class="panel-title">Użytkownicy</h3></strong>
 </div>
 <div class="col col-xs-6 text-right">
 <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-warning btn-create' %>
