--- a/app/views/zgloszenie_aktywnoscs/index.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/index.html.erb
@@ -1,36 +1,52 @@
+<h1>Zgłoszenie - Aktywność</h1><br/>
 
-<h1>Zgłoszenie - Aktywność</h1>
-<div class="jumbotron">
-<div class="table-responsive">
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Zgłoszenie</th>
-      <th>Autor</th>
-      <th>Treść</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 
-  <tbody>
-    <% @zgloszenie_aktywnoscs.each do |zgloszenie_aktywnosc| %>
-      <tr>
-        <td><%= zgloszenie_aktywnosc.id %></td>
-        <td><%= Zgloszenie.where(id:zgloszenie_aktywnosc.zgloszenie).pluck(:id).last %></td>
-        <td><%= User.where(id:zgloszenie_aktywnosc.user_id).pluck(:first_name).last %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 col-md-offset-1">
+            <div class="panel panel-default panel-table">
+              <div class="panel-heading">
+                <div class="row">
+                  <div class="col col-xs-6">
+                    <h3 class="panel-title"></h3>
+                  </div>
+                  <div class="col col-xs-6 text-right">
+                  <%= link_to 'Dodaj do zgłoszenia', new_zgloszenie_aktywnosc_path, class:'btn btn-sm btn-success btn-create' %>
+                  <% if current_user.admin? %>
+                  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-success btn-create' %>
+                  <% end %>
+                  </div>
+                </div>
+              </div>
+              <div class="panel-body">
+                <table class="table table-striped table-bordered table-list">
+                  <thead>
+                    <tr>
+                        <th><em class="fa fa-cog"></em></th>
+                        <th class="hidden-xs">ID</th>
+                        <th>Zgłoszenie</th>
+                        <th>Autor</th>
+                        <th>Opis</th>
+                    </tr> 
+                  </thead>
+                  <tbody>
+                  <% @zgloszenie_aktywnoscs.each do |zgloszenie_aktywnosc| %>
+                          <tr>
+                            <td align="center">
+                            <%= link_to '', zgloszenie_aktywnosc, class:'btn btn-warning fa fa-eye' %>
+                            <%= link_to '', edit_zgloszenie_aktywnosc_path(zgloszenie_aktywnosc), class:'btn btn-primary fa fa-pencil' %>
+                            <%= link_to '', zgloszenie_aktywnosc, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger fa fa-trash' %>
+                            </td>
+                            <td class="hidden-xs"><%= zgloszenie_aktywnosc.id %></td>
+                            <td><%= Zgloszenie.where(id:zgloszenie_aktywnosc.zgloszenie).pluck(:id).last %></td>
+                            <td><%= User.where(id:zgloszenie_aktywnosc.user_id).pluck(:first_name).last %>
         <%= User.where(id:zgloszenie_aktywnosc.user_id).pluck(:last_name).last %></td>
         <td><%= zgloszenie_aktywnosc.tresc %></td>
-        <td><%= link_to 'Pokaż', zgloszenie_aktywnosc, class:'btn btn-xs btn-primary' %></td>
-        <td><%= link_to 'Edytuj', edit_zgloszenie_aktywnosc_path(zgloszenie_aktywnosc), class:'btn btn-xs btn-warning' %></td>
-        <td><%= link_to 'Usuń', zgloszenie_aktywnosc, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-xs btn-danger' %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-</div>
-<%= link_to 'Dodaj nową do zgłoszenia', new_zgloszenie_aktywnosc_path, class:'btn btn-success' %>
-<% if current_user.admin? %>
-<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-primary' %>
-<% end %>
-</div>
+                          </tr>
+                          <% end %>
+                        </tbody>
+                </table>
+              </div>
+            </div>
+</div></div></div>
