--- a/app/views/stanowiskos/_form.html.erb
+++ b/app/views/stanowiskos/_form.html.erb
@@ -17,6 +17,6 @@
   </div><br />
 
   <div class="actions">
-    <%= f.submit "Aktualizuj", class: "btn btn-danger"%>
+    <%= f.submit "Dodaj", class: "btn btn-danger"%>
   </div>
 <% end %><br />
