--- a/app/views/dzials/show.html.erb
+++ b/app/views/dzials/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <div class="jumbotron">
 <p>
   <strong>ID:</strong>
@@ -11,8 +9,7 @@
   </p>
  
 <div class="actions">
-<%= link_to 'Edytuj', edit_dzial_path(@dzial), class: "btn btn-primary" %></div><br />
-<div class="actions">
+<%= link_to 'Edytuj', edit_dzial_path(@dzial), class: "btn btn-primary" %>
 <%= link_to 'Wróć', dzials_path, class: "btn btn-success" %>
 </div>
 </div>
