--- a/app/views/static_pages/statystyki.html.erb
+++ b/app/views/static_pages/statystyki.html.erb
@@ -1,5 +1,16 @@
-<h1>Statystyki</h1>
-
+<div class="container">
+    <div class="row">
+    <div class="span12">
+      <form class="form-horizontal" action='' method="POST">
+        <fieldset>
+          <div id="legend">
+            <legend class=""><h4>Statystyki</h4></legend>
+          </div>
+          </fieldset>
+          </form>
+          </div>
+          </div>
+          </div>  
 <div class="jumbotron">
   <h2>Zgłoszenia</h2>
   <h4>Ogólna ilość zgłoszeń: <b><%= Zgloszenie.calculate(:count, :all) %></b></h4>
