--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -16,7 +16,7 @@
 
     <div class="form-group">
       <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+        <span class="input-group-addon"><i class=" fa fa-envelope"></i></span>
         <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "email" %>
       </div>
     </div>
