--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <%= link_to "Moje Zlecenia", static_pages_showzgloszenies_path, class: 'navbar-brand' %>
         <% end %>
         <%= link_to "Zgłoszenia", zgloszenies_path, class: 'navbar-brand' %>
-        <%= link_to "Edycja Profilu", edit_user_registration_path, class: 'navbar-brand' %>
+        <%= link_to "Edycja konta", edit_user_registration_path, class: 'navbar-brand' %>
         <%= link_to "Wylogowanie", destroy_user_session_path, method: :delete, class: 'navbar-brand' %>
         <% if current_user.admin? %>
           <%= link_to "Zaplecze", static_pages_paneladmina_path, class: 'navbar-brand' %>
@@ -21,3 +21,4 @@
     </div>
   </div>
 </nav>
+
