--- a/app/views/static_pages/paneladmina.html.erb
+++ b/app/views/static_pages/paneladmina.html.erb
@@ -1,4 +1,16 @@
-<h1>Zaplecze - Panel Administracyjny</h1>
+<div class="container">
+    <div class="row">
+    <div class="span12">
+      <form class="form-horizontal" action='' method="POST">
+        <fieldset>
+          <div id="legend">
+            <legend class=""><h4>Panel Administracyjny</h4></legend>
+          </div>
+          </fieldset>
+          </form>
+          </div>
+          </div>
+          </div>  
 
 <div class="jumbotron">
 <p align="center">
