--- a/app/views/static_pages/showzgloszenies.html.erb
+++ b/app/views/static_pages/showzgloszenies.html.erb
@@ -4,7 +4,7 @@
       <form class="form-horizontal" action='' method="POST">
         <fieldset>
           <div id="legend">
-            <legend class=""><h4><strong>Moje </strong> zlecenia</legend>
+            <legend class=""><h4>zlecenia</h4></legend>
           </div>
           </fieldset>
           </form>
