--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,6 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Witamy <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Witaj! Informujesz nas, że nie pamiętasz hasła.	
+Aby odzyskać dostęp do swojego konta, kliknij aktualizuj hasło.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<%= link_to 'Aktualizuj hasło', edit_password_url(@resource, reset_password_token: @token) %>
