--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,6 +1,6 @@
 <p>Witamy <%= @resource.email %>!</p>
 
-<p>Witaj! Informujesz nas, że nie pamiętasz hasła.	
+<p>Informujesz nas, że nie pamiętasz hasła.	
 Aby odzyskać dostęp do swojego konta, kliknij aktualizuj hasło.</p>
 
 <%= link_to 'Aktualizuj hasło', edit_password_url(@resource, reset_password_token: @token) %>
