--- a/app/views/dzials/index.html.erb
+++ b/app/views/dzials/index.html.erb
@@ -1,45 +1,5 @@
-<h1>Działy</h1><br/>
+<%= render 'dzials/partials/search', dzials: @dzials %>
 
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
-
-<div class="container">
-    <div class="row">
-      <div class="col-md-10 col-md-offset-1">
-            <div class="panel panel-default panel-table">
-              <div class="panel-heading">
-                <div class="row">
-                  <div class="col col-xs-6">
-                    <h3 class="panel-title"></h3>
-                  </div>
-                  <div class="col col-xs-6 text-right">
-                  <%= link_to 'Dodaj dział', new_dzial_path, class:'btn btn-sm btn-success btn-create' %>
-                  <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-success btn-create' %>
-                  </div>
-                </div>
-              </div>
-              <div class="panel-body">
-                <table class="table table-striped table-bordered table-list">
-                  <thead>
-                    <tr>
-                        <th><em class="fa fa-cog"></em></th>
-                        <th class="hidden-xs">ID</th>
-                        <th>Nazwa</th>
-                    </tr> 
-                  </thead>
-                  <tbody>
-                  <% @dzials.each do |dzial| %>
-                          <tr>
-                            <td align="center">
-                            <%= link_to '', dzial, class:'btn btn-warning fa fa-eye' %>
-                            <%= link_to '', edit_dzial_path(dzial), class:'btn btn-primary fa fa-pencil' %>
-                            <%= link_to '', dzial, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger fa fa-trash' %>
-                            </td>
-                            <td class="hidden-xs"><%= dzial.id %></td>
-                            <td><%= dzial.nazwa %></td>
-                          </tr>
-                          <% end %>
-                        </tbody>
-                </table>
-              </div>
-            </div>
-</div></div></div>
+<div class="table-responsive">
+<%= render 'dzials/partials/dzials_table', dzials: @dzials %>
+</div>
