--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,24 +1,35 @@
-<h2>Edycja użytkownika</h2>
-
 <%= form_for(@user) do |f| %>
-
-<div class="jumbotron">
-
-  <div class="field">
-    <p>Stanowisko </label></br />
-    <%= f.collection_select :stanowisko_id, Stanowisko.all, :id, :nazwa, :prompt => "Wybierz", class:'dropdown-toggle' %></p>
+<div class="container">
+    <div class="row">
+    <div class="span12">
+      <form class="form-horizontal" action='' method="POST">
+        <fieldset>
+          <div id="legend">
+            <legend class=""><h4>Edycja użytkownika</h4></legend>
+          </div>
+          <div class="control-group">
+            <!-- Username -->
+            <label class="control-label"  for="username">Stanowisko</label>
+            <div class="controls">
+            <%= f.collection_select :stanowisko_id, Stanowisko.all, :id, :nazwa,prompt: "Wybierz", class:'input-xlarge' %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password">Dział użytkownika</label>
+            <div class="controls">
+            <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", class:'input-xlarge' %>
+            </div>
+          </div></fieldset><br/>
+          <div class="control-group">
+            <!-- Button -->
+            <div class="controls">
+             <%= f.submit "Aktualizuj", class:'btn btn-success' %>
+             <%= link_to "Wróć", :back, class: "btn btn-primary" %>
+            </div>
+          </div>
+        </fieldset>
+      </form>
+    </div>
   </div>
-
-  <div class="field">
-    <p>Dział użytkownika </label></br />
-    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", class:'dropdown-toggle' %></p>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Aktualizuj", class:'btn btn-primary' %>
-  </div>
+</div>
 <% end %>
-
-<div class="actions">
-<%= link_to "Wróć", :back, class: "btn btn-success" %>
- </div><br />
