--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -221,3 +221,14 @@ table#acrylic {
     margin-top: 20px;
     text-transform: uppercase;
 }  
+
+.turbolinks-progress-bar {
+  height: 5px;
+  background-color: green;
+}
+
+.control-group h5{
+    font-family: roboto;
+    font-weight: bold;
+    font-size: 15px;
+}
