--- a/app/views/dzials/new.html.erb
+++ b/app/views/dzials/new.html.erb
@@ -1,4 +1,5 @@
-<h1>Nowy Dział</h1>
+<%= render 'dzials/edit/new', dzials: @dzials %>
+
 
 <%= render 'form', dzial: @dzial %>
 <div class="actions">
