--- a/app/views/stanowiskos/edit.html.erb
+++ b/app/views/stanowiskos/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edytuj Stanowisko</h1>
+<%= render 'stanowiskos/edit/edit', stanowiskos: @stanowiskos %>
 
 <%= render 'form', stanowisko: @stanowisko %>
 
