--- a/app/views/stanowiskos/new.html.erb
+++ b/app/views/stanowiskos/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Nowe Stanowisko</h1>
+<%= render 'stanowiskos/edit/new', stanowiskos: @stanowiskos %>
 
 <%= render 'form', stanowisko: @stanowisko %>
 <div class="actions">
