--- a/app/views/stanowiskos/partials/_stanowiskos_table.html.erb
+++ b/app/views/stanowiskos/partials/_stanowiskos_table.html.erb
@@ -6,7 +6,7 @@
 <div class="panel-heading">
 <div class="row">
 <div class="col col-xs-6">
-<h3 class="panel-title">Stanowiska</h3>
+<h3 class="panel-title"><strong>Stanowiska</strong></h3>
 </div>
 <div class="col col-xs-6 text-right">
 <%= link_to 'Dodaj stanowisko', new_stanowisko_path, class:'btn btn-sm btn-success btn-create' %>
@@ -19,7 +19,7 @@
 <thead>
 <tr>
   <th><em class="fa fa-cog"></em></th>
-  <th class="hidden-xs">ID</th>
+  <th class="hidden-xs"><h5>ID</h5></th>
   <th>Nazwa</th>
 </tr> 
 </thead>
