--- a/app/views/zgloszenie_aktywnoscs/edit.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edycja Zgloszenia Aktywności</h1>
+<%= render 'zgloszenie_aktywnoscs/edit/edit', zgloszenie_aktywnoscs: @zgloszenie_aktywnoscs %>
 
 <%= render 'form', zgloszenie_aktywnosc: @zgloszenie_aktywnosc %>
 
