--- a/app/views/zgloszenie_aktywnoscs/new.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Nowe Zgłoszenie</h1>
+<%= render 'zgloszenie_aktywnoscs/edit/new', zgloszenie_aktywnoscs: @zgloszenie_aktywnoscs %>
 
 <%= render 'form', zgloszenie_aktywnosc: @zgloszenie_aktywnosc %>
 
