--- a/app/views/zgloszenies/edit.html.erb
+++ b/app/views/zgloszenies/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edycja Zgłoszenia</h1>
+<%= render 'zgloszenies/edit/edit', zgloszenies: @zgloszenies %>
 
 <%= render 'form', zgloszeny: @zgloszeny %>
 
