--- a/app/views/zgloszenies/new.html.erb
+++ b/app/views/zgloszenies/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Nowe Zgłoszenie</h1>
+<%= render 'zgloszenies/edit/new', zgloszenies: @zgloszenies %>
 
 <%= render 'form', zgloszeny: @zgloszeny %>
 <div class="actions">
