--- a/app/views/dzials/_form.html.erb
+++ b/app/views/dzials/_form.html.erb
@@ -11,12 +11,15 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :nazwa %><br />
-    <%= f.text_area :nazwa %>
-  </div><br />
-
-  <div class="actions">
-    <%= f.submit "Dodaj Dział", class: "btn btn-success" %>
-  </div>
+  <div class="control-group">
+            <label class="control-label"  for="username"><h5>Nazwa</h5></label>
+            <div class="controls">
+            <%= f.text_area :nazwa, class: 'input-xlarge' %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <div class="controls">
+             <%= f.submit "Dodaj Dział", class: "btn btn-success" %>
+            </div>
+          </div>
 <% end %><br />
