--- a/app/views/dzials/partials/_dzials_table.html.erb
+++ b/app/views/dzials/partials/_dzials_table.html.erb
@@ -1,5 +1,3 @@
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
-
 <div class="container">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
@@ -7,7 +5,7 @@
               <div class="panel-heading">
                 <div class="row">
                   <div class="col col-xs-6">
-                    <h3 class="panel-title">Działy</h3>
+                    <h3 class="panel-title"><strong>Działy</strong></h3>
                   </div>
                   <div class="col col-xs-6 text-right">
                   <%= link_to 'Dodaj dział', new_dzial_path, class:'btn btn-sm btn-success btn-create' %>
