--- a/app/views/users/partials/_search.html.erb
+++ b/app/views/users/partials/_search.html.erb
@@ -3,7 +3,7 @@
 <div class="col-lg-6">
 <div class="input-group">
 <%= form_tag( users_path ,method: :get, remote: true, class: "search_form_u") do %>
-<%= text_field_tag :search, params[:search], class: "form-control SearchBar", placeholder: 'Wyszukaj...' %>
+<%= text_field_tag :search, params[:search], class: "form-control SearchBar", placeholder: 'Wpisz : Imie, Nazwisko, Email' %>
 <% end %> 
   <span class="input-group-btn">
     <button class="btn btn-defaul SearchButton" type="button">
