--- a/app/views/zgloszenie_aktywnoscs/_form.html.erb
+++ b/app/views/zgloszenie_aktywnoscs/_form.html.erb
@@ -11,17 +11,22 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :zgloszenie_id %><br />
-    <%= f.text_field :zgloszenie_id %>
-  </div><br />
-
-  <div class="field">
-    <%= f.label :tresc %><br />
-    <%= f.text_area :tresc %>
-  </div><br />
-
-  <div class="actions">
-    <%= f.submit "Dodaj", class:'btn btn-success' %>
-  </div>
+  <div class="control-group">
+            <!-- Username -->
+            <label class="control-label"  for="username"><h5>Zgłoszenie</h5></label>
+            <div class="controls">
+            <%= f.text_field :zgloszenie_id, class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Treść</h5></label>
+            <div class="controls">
+            <%= f.text_area :tresc, class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <div class="controls">
+            <%= f.submit "Dodaj", class:'btn btn-success' %>
+            </div>
+          </div>
 <% end %><br />
