--- a/app/views/zgloszenies/_form.html.erb
+++ b/app/views/zgloszenies/_form.html.erb
@@ -13,52 +13,61 @@
       </ul>
     </div>
   <% end %><br />
-<div class="field">
-  <%= f.hidden_field :user_id, :value => current_user.id  %>
 
-</div>
-  <div class="field">
-    <%= f.label :Zgłoszenie_do_działu %><br/>
-    <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", id:"dzialselect"%>
-  </div><br/>
-  <div class="field">
-    <%= f.label :data_zgłoszenia %><br/>
-    <%= f.date_select :data_zgloszenia %>
-  </div><br/>
-
-  <div class="field">
-    <%= f.label :nazwa_urzadzenia %><br/>
-    <%= f.text_area :nazwa_urzadzenia %>
-  </div><br/>
-
-  <div class="field"><br/><%= f.label :opis_uszkodzenia %><br/>
-    <%= f.text_area :opis_uszkodzenia %>
-  </div><br/>
-
-  <div class="field">
-    <%= f.label :wysyłka %><br/>
-    <%= f.select :wysylka, [['Tak', true], ['Nie', false]] %>
-  </div><br />
-
-  <% if current_user.ispracownik? %>
-  <div class="field">
-    <%= f.label :priorytet %><br/>
-    <%= f.text_field :priorytet %>
-  </div><br/>
-
-  <div class="field">
-    <%= f.label :status %><br/>
-    <%= f.text_field :status %>
-  </div><br/>
-
-  <div class="field">
-    <%= f.label :data_naprawy %><br/>
-    <%= f.date_select :data_naprawy, :default => nil %>
-  </div><br/>
-
+  <div class="control-group">
+            <%= f.hidden_field :user_id, :value => current_user.id  %>
+            <label class="control-label"  for="username"><h5>Zgłoszenie do działu</h5></label>
+            <div class="controls">
+            <%= f.collection_select :dzial_id, Dzial.all, :id, :nazwa, prompt: "Wybierz", id:"dzialselect", class: 'input-xlarge' %>   
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Data zgłoszenia</h5></label>
+            <div class="controls">
+            <%= f.date_select :data_zgloszenia, class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Nazwa urzadzenia</h5></label>
+            <div class="controls">
+            <%= f.text_area :nazwa_urzadzenia, class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Opis uszkodzenia</h5></label>
+            <div class="controls">
+            <%= f.text_area :opis_uszkodzenia, class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Wysyłka</h5></label>
+            <div class="controls">
+            <%= f.select :wysylka, [['Tak', true], ['Nie', false]], class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Priorytet</h5></label>
+            <% if current_user.ispracownik? %>
+            <div class="controls">
+            <%= f.text_field :priorytet, class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Status</h5></label>
+            <div class="controls">
+            <%= f.select :status, options_for_select(Zgloszenie.statuses_for_select), class: "input-xlarge" %>
+            </div>
+          </div><br/>
+          <div class="control-group">
+            <label class="control-label" for="password"><h5>Data naprawy</h5></label>
+            <div class="controls">
+            <%= f.date_select :data_naprawy, :default => nil, class: "input-xlarge" %>
+            </div>
+          </div><br/>
   <% end %>
-
-  <div class="actions">
-    <%= f.submit "Dodaj zgłoszenie", class:'btn btn-success' %>
-  </div>
+  <div class="control-group">
+            <div class="controls">
+            <%= f.submit "Dodaj zgłoszenie", class:'btn btn-success' %>
+            </div>
+          </div>
 <% end %><br />
