--- a/app/views/zgloszenies/partials/_search.html.erb
+++ b/app/views/zgloszenies/partials/_search.html.erb
@@ -1,9 +1,8 @@
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
 <div class="row">
 <div class="col-lg-6">
 <div class="input-group">
 <%= form_tag( zgloszenies_path ,method: :get, remote: true, class: "search_form_z") do %>
-<%= text_field_tag :search, params[:search], class: "form-control SearchBar", placeholder: 'Wyszukaj...' %>
+<%= text_field_tag :search, params[:search], class: "form-control SearchBar", placeholder: 'Wpisz : Imie, Nazwisko, Email użytkownika, Nazwa urządzenia' %>
 <% end %>
 <span class="input-group-btn">
     <button class="btn btn-defaul SearchButton" type="button">
