--- a/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
+++ b/app/views/zgloszenies/partials/_zgloszenies_table.html.erb
@@ -1,76 +1,74 @@
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
-
 <div class="container">
-<div class="row">
-<div class="col-md-10 col-md-offset-1">
-<div class="panel panel-default panel-table">
-<div class="panel-heading">
-<div class="row">
-<div class="col col-xs-6">
-<strong><h3 class="panel-title">Zgłoszenia</h3></strong>
-</div>
-<div class="col col-xs-6 text-right">
-<%= link_to 'Dodaj Zgłoszenie', new_zgloszeny_path, class:'btn btn-sm btn-success btn-create' %>
-<%= link_to 'Pobierz PDF', zgloszenies_path(@zgloszenies, format: "pdf"), class:'btn btn-sm btn-success btn-create'%>
-<% if current_user.admin? %>
-<%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-success btn-create' %>
-<% end %>
-</div>
-</div>
-</div>
-<div class="panel-body">
-<table class="table table-striped table-bordered table-list">
-<thead>
-<tr>
-  <th><em class="fa fa-cog"></em></th>
-  <th class="hidden-xs">ID</th>
-  <th>Dział</th>
-  <th>Priorytet</th>
-  <th>Status</th>
-  <th>Data zgłoszenia</th>
-  <th>Data naprawy</th>
-  <th>Nazwa</th>
-  <th>Opis urzadzenia</th>
-  <th>Wysyłka</th>
-  <% if current_user.admin? %>
-  <th>ID U</th>
-  <th>ID S</th>
-  <% end %>
-</tr> 
-</thead>
-<tbody>
-<% @zgloszenies.each do |zgloszeny| %>
-<% if current_user.id == zgloszeny.user_id || current_user.admin? %>
-    <tr>
-      <td align="center">
-      <%= link_to '', zgloszeny, class:'btn btn-warning fa fa-eye' %>
-      <%= link_to '', edit_zgloszeny_path(zgloszeny), class:'btn btn-primary fa fa-pencil' %>
-      <%= link_to '', zgloszeny, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger fa fa-trash' %>
-      </td>
-      <td class="hidden-xs"><%= zgloszeny.id %></td>
-      <td><%= Dzial.where(id:zgloszeny.dzial_id).pluck(:nazwa).last %></td>
-      <td><%= zgloszeny.priorytet %></td>
-      <td><%= zgloszeny.status %></td>
-      <td><%= zgloszeny.data_zgloszenia %></td>
-      <td><%= zgloszeny.data_naprawy %></td>
-      <td><%= zgloszeny.nazwa_urzadzenia %></td>
-      <td><%= zgloszeny.opis_uszkodzenia %></td>
-      <td><%= zgloszeny.wysylka %></td>
+      <div class="row">
+      <div class="col-md-10 col-md-offset-1">
+      <div class="panel panel-default panel-table">
+      <div class="panel-heading">
+      <div class="row">
+      <div class="col col-xs-6">
+      <h3 class="panel-title"><strong>Zgłoszenia</strong></h3>
+      </div>
+      <div class="col col-xs-6 text-right">
+      <%= link_to 'Dodaj Zgłoszenie', new_zgloszeny_path, class:'btn btn-sm btn-success btn-create' %>
+      <%= link_to 'Pobierz PDF', zgloszenies_path(@zgloszenies, format: "pdf"), class:'btn btn-sm btn-success btn-create'%>
       <% if current_user.admin? %>
-      <td><%= zgloszeny.user_id %></td>
-      <td>
-      <% if zgloszeny.pracownikid.nil? %>
-       Brak
-      <% else %>
-      <%= zgloszeny.pracownikid %></td>
+      <%= link_to 'Zaplecze', static_pages_paneladmina_path, class:'btn btn-sm btn-success btn-create' %>
       <% end %>
-      <% end %>
-    </tr>
-    <% end %>
+      </div>
+      </div>
+      </div>
+      <div class="panel-body">
+      <table class="table table-striped table-bordered table-list">
+      <thead>
+      <tr>
+        <th><em class="fa fa-cog"></em></th>
+        <th class="hidden-xs">ID</th>
+        <th>Dział</th>
+        <th>Priorytet</th>
+        <th>Status</th>
+        <th>Data zgłoszenia</th>
+        <th>Data naprawy</th>
+        <th>Nazwa</th>
+        <th>Opis urzadzenia</th>
+        <th>Wysyłka</th>
+        <% if current_user.admin? %>
+        <th>ID U</th>
+        <th>ID S</th>
+        <% end %>
+      </tr> 
+      </thead>
+      <tbody>
+      <% @zgloszenies.each do |zgloszeny| %>
+      <% if current_user.id == zgloszeny.user_id || current_user.admin? %>
+          <tr>
+            <td align="center">
+            <%= link_to '', zgloszeny, class:'btn btn-warning fa fa-eye' %>
+            <%= link_to '', edit_zgloszeny_path(zgloszeny), class:'btn btn-primary fa fa-pencil' %>
+            <%= link_to '', zgloszeny, method: :delete, data: { confirm: 'Jesteś pewny?' }, class:'btn btn-danger fa fa-trash' %>
+            </td>
+            <td class="hidden-xs"><%= zgloszeny.id %></td>
+            <td><%= Dzial.where(id:zgloszeny.dzial_id).pluck(:nazwa).last %></td>
+            <td><%= zgloszeny.priorytet %></td>
+            <td><%= t("activerecord.attributes.zgloszenie.statuses.#{zgloszeny.status}") %></td>
+            <td><%= zgloszeny.data_zgloszenia %></td>
+            <td><%= zgloszeny.data_naprawy %></td>
+            <td><%= zgloszeny.nazwa_urzadzenia %></td>
+            <td><%= zgloszeny.opis_uszkodzenia %></td>
+            <td><%= zgloszeny.wysylka %></td>
+            <% if current_user.admin? %>
+            <td><%= zgloszeny.user_id %></td>
+            <td>
+            <% if zgloszeny.pracownikid.nil? %>
+             Brak
+            <% else %>
+            <%= zgloszeny.pracownikid %></td>
+            <% end %>
+            <% end %>
+          </tr>
+          <% end %>
 
-    <% end %>
-  </tbody>
-</table>
-</div>
-</div>
-</div></div></div>
+          <% end %>
+        </tbody>
+      </table>
+      </div>
+      </div>
+      </div></div></div>
