--- a/app/views/zgloszenies/print.html.erb
+++ b/app/views/zgloszenies/print.html.erb
@@ -8,7 +8,7 @@
   <td>
   <p><h2>Dział: <%= Dzial.where(id:@zgloszeny.dzial_id).pluck(:nazwa).last %> </h2> </p>
   <p> <strong>Priorytet: </strong><%= @zgloszeny.priorytet %>
-  <strong>Status:</strong> <%= @zgloszeny.status %> </p>
+  <strong>Status:</strong> <%= t("activerecord.attributes.zgloszenie.statuses.#{@zgloszeny.status}") %> </p>
 
   <p> <strong>Data zgłoszenia:</strong> <%= @zgloszeny.data_zgloszenia %>
   <strong>Data naprawy:</strong> <%= @zgloszeny.data_naprawy %> </p>
