--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -232,3 +232,9 @@ table#acrylic {
     font-weight: bold;
     font-size: 15px;
 }
+
+.well well-sm h4{
+    font-family: roboto;
+    font-weight: bold;
+    font-size: 15px;
+}
