--- a/app/views/stanowiskos/show.html.erb
+++ b/app/views/stanowiskos/show.html.erb
@@ -1,15 +1,26 @@
-<div class="jumbotron">
-  <p>
-  <strong>ID:</strong>
+<%= render 'stanowiskos/edit/page', stanowiskos: @stanowiskos %>
+  
+<div class="container">
+    <div class="row">
+		<div class="col-md-4">
+            <div class="well well-sm">
+                <div class="media">
+                    <div class="media-body">
+                        <h4 class="media-heading"></h4>
+                        <p>
+  <h4><strong>ID:</strong>
   <%= @stanowisko.id %>
-</p>
-<p>
+</p></h4>
+<h4><p>
   <strong>Nazwa:</strong>
   <%= @stanowisko.nazwa %>
-  </p><br />
-
-<div class="actions">
-<%= link_to 'Edytuj', edit_stanowisko_path(@stanowisko), class: "btn btn-primary" %>
+  </p></h4><br/>
+  <%= link_to 'Edytuj', edit_stanowisko_path(@stanowisko), class: "btn btn-primary" %>
 <%= link_to 'Wróć', stanowiskos_path, class: "btn btn-success" %>
-</div>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+	</div>
 </div>
