--- a/app/views/zgloszenies/show.html.erb
+++ b/app/views/zgloszenies/show.html.erb
@@ -1,21 +1,29 @@
 <%= render 'zgloszenies/edit/page', zgloszenies: @zgloszenies %>
-<table> <tr>
-  <td style="text-align: center;">
-      <%= image_tag(generate_qr(@zgloszeny.id.to_s), class: "qr-code") %>
-  </td> <td width=20></td>
-  <td>
-  <p><h2>Dział: <%= Dzial.where(id:@zgloszeny.dzial_id).pluck(:nazwa).last %> </h2> </p>
-  <p> <strong>Priorytet: </strong><%= @zgloszeny.priorytet %>
-  <strong>Status:</strong> <%= t("activerecord.attributes.zgloszenie.statuses.#{@zgloszeny.status}") %> </p>
 
-  <p> <strong>Data zgłoszenia:</strong> <%= @zgloszeny.data_zgloszenia %>
-  <strong>Data naprawy:</strong> <%= @zgloszeny.data_naprawy %> </p>
-
-  <p> <strong>Nazwa urzadzenia:</strong> <%= @zgloszeny.nazwa_urzadzenia %> </p>
-  <p> <strong>Opis uszkodzenia:</strong> <%= @zgloszeny.opis_uszkodzenia %> </p>
-  <p> <strong>Wysyłka:</strong> <%= @zgloszeny.wysylka %> </p>
-  </td> </tr> </table>
-
+<div class="container">
+    <div class="row">
+    <div class="col-md-4">
+            <div class="well well-sm">
+                <div class="media">
+                    <div class="media-body">
+                        <h4 class="media-heading"></h4>
+                        <center><p>
+                            <%= image_tag(generate_qr(@zgloszeny.id.to_s), class: "qr-code") %></p></center><br/>
+                            <h4><p><strong>Dział: </strong> <%= Dzial.where(id:@zgloszeny.dzial_id).pluck(:nazwa).last %></p></h4>
+                            <h4><p><strong>Priorytet: </strong><%= @zgloszeny.priorytet %></p></h4>
+  <h4><p><strong>Status:</strong> <%= t("activerecord.attributes.zgloszenie.statuses.#{@zgloszeny.status}") %></p></h4>
+  <h4><p><strong>Data zgłoszenia:</strong> <%= @zgloszeny.data_zgloszenia %></p></h4>
+  <h4><p><strong>Data naprawy:</strong> <%= @zgloszeny.data_naprawy %></p></h4>
+  <h4><p><strong>Nazwa urzadzenia:</strong> <%= @zgloszeny.nazwa_urzadzenia %></p></h4>
+  <h4><p><strong>Opis uszkodzenia:</strong> <%= @zgloszeny.opis_uszkodzenia %></p></h4>
+  <h4><p><strong>Wysyłka:</strong> <%= @zgloszeny.wysylka %></p></h4>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+  </div>
+</div>
 
 <div class="jumbotron" align="center">
   <%= link_to 'Edytuj Zgłoszenie', edit_zgloszeny_path(@zgloszeny), class:'btn btn btn-danger' %>
